# sparse_qr_rust

./: Cargo.toml  README.md  build.rs
examples/: arbstencil_bench.rs  dtree_children_graph.rs  dtree_parents_graph.rs  laplace1d_f64.rs  laplace1d_factorize.rs  laplace2d_f64.rs  laplace2d_factorize.rs  laplace3d_f64.rs  metis_graph_graphviz.rs  metis_squared_graphviz.rs  metis_stencil_squared.rs  simple_metis_usage.rs
src/: dtree.rs  gallery.rs  lib.rs  metis.rs  numeric.rs  sparse.rs  utility.rs
