[package]
name = "sparse_qr_rust"
version = "0.1.0"
authors = ["Reid Atcheson <reid.atcheson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-complex = "0.3.1"
openblas-src = "0.10.2"
lapack = "0.17.0"
blas = "0.21.0"
