[package]
name = "sparse_qr_rust"
version = "0.1.0"
authors = ["Reid Atcheson <reid.atcheson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-complex = "0.4"
openblas-src = "0.10.4"
lapack = "0.19.0"
blas = "0.22.0"
